start of styling changes to best practices added legend.js for charts

--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -92,21 +92,21 @@
 		var pieData = [
 				{
 					value: %li,
-					color:"#F7464A",
-					highlight: "#FF5A5E",
-					label: "Red"
+					color:"#ff9f33",
+					highlight: "#FFB25C",
+					label: "Yes"
 				},
 				{
 					value: %li,
-					color: "#46BFBD",
-					highlight: "#5AD3D1",
-					label: "Green"
+					color: "#445ae1",
+					highlight: "#697BE7",
+					label: "No"
 				},
 				{
 					value: %li,
-					color: "#FDB45C",
-					highlight: "#FFC870",
-					label: "Yellow"
+					color: "#2ee478",
+					highlight: "#58E993",
+					label: "Not Yet"
 				}
 
 			];
