--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -15,6 +15,25 @@
             position: relative; /* For scrollyspy */
 
         }
+		.list-group-item {
+		  position: relative;
+		  display: block;
+		  font-size: 16px;
+		  text-align: center;
+		  padding:1rem 1.5rem;
+		  margin-bottom: -1px;
+		  background-color: #ffffff;
+		  border-top: 1px solid #dddddd;
+		  border-bottom: 1px solid #dddddd;
+		}
+		.list-group-item:last-child {
+		  margin-bottom: 0;
+		  border-bottom-right-radius: 0px;
+		  border-bottom-left-radius: 0px;
+		  border-bottom: 0px solid #dddddd;
+		  padding:1rem 1rem 0rem 1rem;
+		}
+		
 		.popover{
 		    width:200px;
 		}
@@ -117,9 +136,9 @@
 		<section class="card">
     		<p style="font-size:14px">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
 		</section>
-    <p style="margin: 20px; font-size: 14px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
+    <p style="margin: 1.5rem; font-size: 14px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
    	</div>
-	<div class="panel-group" id="accordion" style="margin: 20px;">
+	<div class="panel-group" id="accordion" style="margin: 1.5rem 1rem;">
 	  <div class="panel panel-warning">
 	    <div class="panel-heading" style="background-color: #ff9f33; border-color: #ff9f33;">
 	      <h4 class="panel-title">
