--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -3,58 +3,184 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-11.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+		canvas{
+		  width: 100% !important;
+	      max-width: 280px;
+	      height: 100% !important;
+		}
+
+		header {
+		  position:absolute;
+		  z-index:0;
+		  top:0; left:0; right:0;
+		  height:10rem;
+		  transition:transform .5s, opacity .3s;
+		  background-size:cover;
+		}
+
+		.topcard {
+		  padding:1rem 1rem 0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-11.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.selfasesscard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.scorecardcard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.bestpracticescard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.card {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+		.card:nth-child(even){
+		  animation-name:fly-in-from-right;
+		  animation-delay:1.1s;
+		 transform-origin:top right;
+		}
+
+		@keyframes fly-in-from-left {
+		  from {
+		    transform:translateY(15rem) rotate(15deg);
+		    opacity:0;
+		  }
+		}
+
+		@keyframes fly-in-from-right {
+		  from {
+		    transform:translateY(15rem) rotate(-15deg);
+		    opacity:0;
+		  }
+		}
+
+		.card:after {
+		  position:absolute;
+		  font-size:.9rem;
+		  top:1.5rem;
+		  right:1rem;
+		  border:thin solid gray;
+		  color:gray;
+		  width:1rem;
+		  line-height:1rem;
+		  text-align:center;
+		  border-radius:50%;
+		  pointer-events:none;
+		}
+
+		h1 {
+		  font-size:2rem;
+		  font-weight:200;
+		  margin-top:11px;
+		}
+		  strong {
+		    font-weight:500;
+		    color:#ff9f33;
+		  }
+
+		h2 {
+		  font-size:1.25rem;
+		  color:#ff9f33;
+		  font-weight:400;
+		  margin-top:0px;
+		}
+
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-11.png" width="115px" height="115px" class="img-circle">
-	</div>
-    
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Building a personalized list of best practices will help you:</p>
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-11.png" width="100px" height="100px" class="img-circle">
+		</div>
+    		<p style="font-size: 14px;">Building a personalized list of best practices will help you:</p>
 		
-		<ul style="margin: 20px 20px 20px 0px;">
+		<ul style="margin: 10px 0px 10px -20px;font-size: 14px;">
 			<li>reach agreements that might otherwise slip through your fingers</li>
 			<li>generate (and capture) value through creative problem-solving</li>
 			<li>resolve small disputes before they escalate into costly conflicts</li>
 		</ul>
+	</section>
+	
+	<section class="card">
+		<p style="font-size: 14px;">Your success, however, depends on how much effort you invest into learning from your experience, so that you continue to polish your negotiation skills. The good news is that thoughtful preparation does not take much time. Remember: you want to be the best prepared negotiator at the table.</p>
+	</section>
+	
+	<section class="card">
+		<p style="font-size: 14px;">This feature on the app allows review what has <strong>worked well</strong> for you in the past (and what you would <strong>do differently</strong> in the future). The <strong>Negotiation Performance</strong> section allows you to track your performance over time. You can also navigate back to the <strong>Tips</strong> offered in the self-assessment feature.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Your success, however, depends on how much effort you invest into learning from your experience, so that you continue to polish your negotiation skills. The good news is that thoughtful preparation does not take much time. Remember: you want to be the best prepared negotiator at the table.</p>
-
-		<p style="margin: 20px; font-size: 14px;">This feature on the app allows review what has <strong>worked well</strong> for you in the past (and what you would <strong>do differently</strong> in the future). The <strong>Negotiation Performance</strong> section allows you to track your performance over time. You can also navigate back to the <strong>Tips</strong> offered in the self-assessment feature.</p>
-
-	</div>
+	</section>
 		 
 			
-	<div class="alert alert-info" style="margin:20px">
+	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px"></span>
+				<span data-icon="&#xe032;" style="font-size: 24px;color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
 				To take full advantage of the app, periodically review the kinds of negotiations you engage in, how important they are, and how you feel you've performed. Look for general patterns and trends. 
 			</div>
 		</div>
-	</div>
+	</section>
 	
 	<div style="height:100px">
 	</div>
 		
 			
     <script src="jquery.js"></script>
-    <script src="highcharts.js"></script>
-    <script src="highcharts-more.js"></script>
-    <script src="modules/exporting.js"></script>
 </body>
 </html>
