--- a/Negotiation3/reports/practices-wwidd.html
+++ b/Negotiation3/reports/practices-wwidd.html
@@ -3,34 +3,179 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/docs.css" />
     <style>
         .photo {
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-8.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
         }
+		canvas{
+		  width: 100% !important;
+	      max-width: 280px;
+	      height: 100% !important;
+		}
+
+		header {
+		  position:absolute;
+		  z-index:0;
+		  top:0; left:0; right:0;
+		  height:10rem;
+		  transition:transform .5s, opacity .3s;
+		  background-size:cover;
+		}
+
+		.topcard {
+		  padding:1rem 1rem 0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-8.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.selfasesscard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.scorecardcard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.bestpracticescard {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  background-image: url("top-banner-6.png");
+		  background-repeat: no-repeat;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+
+		.card {
+		  padding:0.5rem 1rem;
+		  box-shadow:0 1px 2px #aaa;
+		  background:white;
+		  margin: 1.5rem 1rem;
+		  border-radius:3px;
+		  user-select:none;
+		  animation:fly-in-from-left .5s 1s ease both;
+		  transform-origin:top left;
+		}
+		.card:nth-child(even){
+		  animation-name:fly-in-from-right;
+		  animation-delay:1.1s;
+		 transform-origin:top right;
+		}
+
+		@keyframes fly-in-from-left {
+		  from {
+		    transform:translateY(15rem) rotate(15deg);
+		    opacity:0;
+		  }
+		}
+
+		@keyframes fly-in-from-right {
+		  from {
+		    transform:translateY(15rem) rotate(-15deg);
+		    opacity:0;
+		  }
+		}
+
+		.card:after {
+		  position:absolute;
+		  font-size:.9rem;
+		  top:1.5rem;
+		  right:1rem;
+		  border:thin solid gray;
+		  color:gray;
+		  width:1rem;
+		  line-height:1rem;
+		  text-align:center;
+		  border-radius:50%;
+		  pointer-events:none;
+		}
+
+		h1 {
+		  font-size:2rem;
+		  font-weight:200;
+		  margin-top:11px;
+		}
+		  strong {
+		    font-weight:500;
+		    color:#ff9f33;
+		  }
+
+		h2 {
+		  font-size:1.25rem;
+		  color:#ff9f33;
+		  font-weight:400;
+		  margin-top:0px;
+		}
+		.list-group-item {
+		  position: relative;
+		  display: block;
+		  font-size: 16px;
+		  text-align: center;
+		  padding: 10px 24px 15px 0px;
+		  margin-bottom: -1px;
+		  background-color: #ffffff;
+		  border-top: 1px solid #dddddd;
+		  border-bottom: 1px solid #dddddd;
+		}
+		.list-group-item:last-child {
+		  margin-bottom: 0;
+		  border-bottom-right-radius: 0px;
+		  border-bottom-left-radius: 0px;
+		  border-bottom: 0px solid #dddddd;
+		}
+		.list-group {
+		  padding-left: 0;
+		  margin-bottom: 0px;
+		}
+
     </style>
 </head>
 <body>
-	<div align="center">
-        <img src="image-8.png" width="115px" height="115px" class="img-circle">
-	</div>
-    
+	<section class="topcard">
+		<div align="center">
+	        <img src="image-8.png" width="100px" height="100px" class="img-circle">
+		</div>
   	<div>
-		<h4 style="margin: 15px 20px 20px 20px; font-weight: 400;">What Would I Do Differently?</p>
+		<h4 style="font-weight: 400; color:#ff9f33">What Would I Do Differently?</h4>
+		<p>Lorem ipsum dolar sit ami</p>
 	</div>
+	</section>
 	
 	<!-- loop the following list group from newest to oldest scorecard data for what would i do differently -->	 
-	<div>
-		<ul class="list-group" >
-%@
-		</ul>
-	</div>		
+			%@
 		
 	<div style="height:100px">
 	</div>
