Removed blue header other styling changes

--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -32,7 +32,7 @@
 	  padding:0.25rem 1rem 0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1rem 1rem;
+	  margin: 1.5rem 1rem;
 	  border-radius:3px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -111,7 +111,7 @@
 	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
  
    		<div class="owl-item">
-			<section class="topcard">
+			<section class="card">
 				<h1>Relational Dimension</h1>
 				<canvas id="canvas"></canvas>
 			</section>
@@ -122,7 +122,7 @@
 		</div>
 
 		<div class="owl-item">	
-			<section class="topcard">
+			<section class="card">
 				<h1>Outcome Dimension</h1>
 				<canvas id="canvas2"></canvas>
 			</section>
@@ -133,7 +133,7 @@
 		</div>
 
       	<div class="owl-item">
-			<section class="topcard">			
+			<section class="card">			
 				<h1>Linking Means and Ends</h1>
 				<canvas id="canvas3"></canvas>
 			</section>
