another pass thru profile and scorecards

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -11,6 +11,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
         }
 		canvas{
 		  width: 100% !important;
@@ -32,8 +33,9 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  background-image: url("top-banner-6.png");
+   		  background-size: 100%;
 		  background-repeat: no-repeat;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
@@ -45,8 +47,9 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
+		  border-radius:1px;
+		  background-image: url("top-profile.png");
+   		  background-size: 100%;
 		  background-repeat: no-repeat;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
@@ -58,9 +61,10 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
+		  border-radius:1px;
+		  background-image: url("top-scorecard.png");
 		  background-repeat: no-repeat;
+   		  background-size: 100%;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -71,8 +75,9 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
+		  border-radius:1px;
+		  background-image: url("top-bestpractice.png");
+   		  background-size: 100%;
 		  background-repeat: no-repeat;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
@@ -84,7 +89,7 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -168,17 +173,17 @@
 		</section>
 
 		<section class="selfasesscard">
-			<div style="height:75px"></div>
+			<div style="height:65px"></div>
 			<p style="font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile that reflects your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
 		</section>
 
 		<section class="scorecardcard">
-			<div style="height:75px"></div>
+			<div style="height:65px"></div>
 			<p style="font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
 		</section>
 
 		<section class="bestpracticescard">
-			<div style="height:75px"></div>
+			<div style="height:65px"></div>
 			<p style="font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you've learned from prior experience so that you can continue to enhance your strategic and interpersonal skills. Remember to consult the <strong>Resources</strong> section, as well, that points you to other sources of valuable negotiation advice.</p>
 		</section>
 
@@ -188,10 +193,10 @@
 	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px; color:#ff9f33"></span>
+				<span data-icon="&#xe032;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				To begin, tap <strong>Next</strong> above and take the short self-assessment test. Then analyze your feedback and review the tips for making better deals. 
+				<p>To begin, tap <strong>Next</strong> above and take the short self-assessment test. Then analyze your feedback and review the tips for making better deals. </p>
 			</div>
 		</div>
 	</section>
