--- a/Negotiation3/reports/resources.html
+++ b/Negotiation3/reports/resources.html
@@ -11,6 +11,8 @@
         background-position: top left;
         background-repeat: no-repeat;
         background-size: 100%;
+	    background-color: #efeff4
+
     }
 
 		canvas{
@@ -33,9 +35,10 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  background-image: url("top-banner-8.png");
 		  background-repeat: no-repeat;
+   		  background-size: 100%;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -46,7 +49,7 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
