--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -11,6 +11,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
         }
 			canvas{
 			  width: 100% !important;
@@ -32,9 +33,10 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  background-image: url("top-banner-11.png");
 			  background-repeat: no-repeat;
+	   		  background-size: 100%;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -44,7 +46,7 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -120,10 +122,10 @@
 	<section class="card">			
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px; color:#ff9f33"></span>
+				<span data-icon="&#xe032;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				To begin, tap <strong>Next</strong> above and enter the details of your most recent negotiation. Then analyze your feedback and review the tips for making better deals. 
+				<p>To begin, tap <strong>Next</strong> above and enter the details of your most recent negotiation. Then analyze your feedback and review the tips for making better deals. </p>
 			</div>
 		</div>
 	</section>
