--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -4,6 +4,12 @@
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
   <style type="text/css">
+  body {
+      background-position: top left;
+      background-repeat: no-repeat;
+      background-size: 100%;
+	    background-color: #efeff4
+  }
 
 .legend {
     width: 15em;
@@ -18,9 +24,9 @@
     margin: 0.5em;
     border-width: 0 0 0 1em;
     padding: 0 0.3em;
-font-size: 11px;
-font-weight: 300;
-color: gray;
+	font-size: 11px;
+	font-weight: 300;
+	color: gray;
 }
 	canvas{
 	  width: 100% !important;
@@ -42,7 +48,7 @@ color: gray;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1rem 1rem;
-	  border-radius:3px;
+	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
 	  transform-origin:top left;
