--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -11,6 +11,8 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
+
         }
 			canvas{
 			  width: 100% !important;
@@ -32,9 +34,10 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  background-image: url("top-banner-3.png");
 			  background-repeat: no-repeat;
+	   		  background-size: 100%;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -44,7 +47,7 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -162,10 +165,10 @@
 	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe030;" style="font-size: 24px; color:#ff9f33"></span>
+				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap <strong>Next</strong> to see how these four essential skills are connected to one another.
+				<p>You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap <strong>Next</strong> to see how these four essential skills are connected to one another.</p>
 			</div>
 		</div>
 	</section>
