--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -11,6 +11,13 @@
   <link rel="stylesheet" href="styles.css" />
 
   <style type="text/css">
+	  body {
+	      background-position: top left;
+	      background-repeat: no-repeat;
+	      background-size: 100%;
+		    background-color: #efeff4
+
+	  }
 
 
 	canvas{
@@ -33,7 +40,7 @@
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1.5rem 1rem;
-	  border-radius:3px;
+	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
 	  transform-origin:top left;
@@ -43,7 +50,7 @@
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1.5rem 1rem;
-	  border-radius:3px;
+	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
 	  transform-origin:top left;
