--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -12,6 +12,8 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
+
         }
 			canvas{
 			  width: 100% !important;
@@ -33,9 +35,10 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  background-image: url("top-banner-1.png");
 			  background-repeat: no-repeat;
+	   		  background-size: 100%;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
