--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style type="text/css">
+	  body {
+	      background-position: top left;
+	      background-repeat: no-repeat;
+	      background-size: 100%;
+		    background-color: #efeff4
+
+	  }
 
 	canvas{
 		width: 100% !important;
@@ -26,8 +33,8 @@
 	  padding:1rem 0rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1.5rem 1rem;
-	  border-radius:3px;
+	  margin: 1rem 1.5rem;
+	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
 	  transform-origin:top left;
