--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -12,6 +12,12 @@
 
   <style type="text/css">
 
+  body {
+      background-position: top left;
+      background-repeat: no-repeat;
+      background-size: 100%;
+	    background-color: #efeff4
+  }
 
 	canvas{
 	  width: 100% !important;
@@ -32,7 +38,7 @@
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
 	  margin: 1.5rem 1rem;
-	  border-radius:3px;
+	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
 	  transform-origin:top left;
@@ -106,9 +112,9 @@
 			<section class="card">
           		<div class="row">
             		<div class="col-xs-1" style="margin-right:10px">
-              			<span data-icon="&#xe571;" style="font-size: 30px; color:#ff9f33"></span>
+              			<span data-icon="&#xe571;" style="font-size: 32px; color:#ff9f33"></span>
             		</div>
-            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">To see what we discovered, swipe to the next page. 
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>To see what we discovered, swipe to the next page. </p>
             		</div>
           		</div>
 			</section>
@@ -122,9 +128,9 @@
 			<section class="card">
           		<div class="row">
             		<div class="col-xs-1" style="margin-right:10px">
-              			<span data-icon="&#xe571;" style="font-size: 30px; color:#ff9f33"></span>
+              			<span data-icon="&#xe571;" style="font-size: 32px; color:#ff9f33"></span>
             		</div>
-            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">To see the five profiles, swipe through to the pages that follow. 
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714"><p>To see the five profiles, swipe through to the pages that follow. </p>
             		</div>
           		</div>
         	</section>
