--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -13,6 +13,7 @@
 		            background-position: top left;
 		            background-repeat: no-repeat;
 		            background-size: 100%;
+				    background-color: #efeff4
 		        }
 					canvas{
 					  width: 100% !important;
@@ -34,7 +35,7 @@
 					  box-shadow:0 1px 2px #aaa;
 					  background:white;
 					  margin: 1.5rem 1rem;
-					  border-radius:3px;
+					  border-radius:1px;
 					  background-image: url("top-banner-12.png");
 					  background-repeat: no-repeat;
 					  user-select:none;
@@ -45,8 +46,8 @@
 					  padding:0.1rem 1rem;
 					  box-shadow:0 1px 2px #aaa;
 					  background:white;
-					  margin: 1.5rem 1rem;
-					  border-radius:3px;
+					  margin: 1rem 1.5rem;
+					  border-radius:1px;
 					  user-select:none;
 					  animation:fly-in-from-left .5s 1s ease both;
 					  transform-origin:top left;
