--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -12,6 +12,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4;
             position: relative; /* For scrollyspy */
 
         }
@@ -56,9 +57,10 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  background-image: url("top-banner-7.png");
 		  background-repeat: no-repeat;
+   		  background-size: 100%;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -69,7 +71,7 @@
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
 		  margin: 1rem 1rem;
-		  border-radius:3px;
+		  border-radius:1px;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -136,7 +138,9 @@
 		<section class="card">
     		<p style="font-size:14px">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
 		</section>
-    <p style="margin: 1.5rem; font-size: 14px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
+		<section class="card">
+    		<p style="font-size: 16px; color:#ff9f33"><strong>Here are some tips for improving your effectiveness</strong></p>
+		</section>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 1.5rem 1rem;">
 	  <div class="panel panel-warning">
