--- a/Negotiation3/reports/test1.html
+++ b/Negotiation3/reports/test1.html
@@ -11,6 +11,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+
         }
 			canvas{
 			  width: 100% !important;
@@ -32,9 +33,10 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  background-image: url("top-banner-4.png");
 			  background-repeat: no-repeat;
+	   		  background-size: 100%;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -44,7 +46,7 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
