--- a/Negotiation3/reports/test2.html
+++ b/Negotiation3/reports/test2.html
@@ -32,9 +32,10 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1.5rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  background-image: url("top-banner-2.png");
 			  background-repeat: no-repeat;
+	   		  background-size: 100%;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
@@ -44,7 +45,7 @@
 			  box-shadow:0 1px 2px #aaa;
 			  background:white;
 			  margin: 1.5rem 1rem;
-			  border-radius:3px;
+			  border-radius:1px;
 			  user-select:none;
 			  animation:fly-in-from-left .5s 1s ease both;
 			  transform-origin:top left;
