best practices edits

--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -11,6 +11,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
         }
 		canvas{
 		  width: 100% !important;
@@ -31,49 +32,11 @@
 		  padding:1rem 1rem 0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
+		  margin: 1rem 1rem;
+		  border-radius:1px;
 		  background-image: url("top-banner-11.png");
 		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.selfasesscard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.scorecardcard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.bestpracticescard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
+   		  background-size: 100%;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -83,8 +46,8 @@
 		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
+		  margin: 1rem 1rem;
+		  border-radius:1px;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -169,10 +132,10 @@
 	<section class="card">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe032;" style="font-size: 24px;color:#ff9f33"></span>
+				<span data-icon="&#xe032;" style="font-size: 32px;color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				To take full advantage of the app, periodically review the kinds of negotiations you engage in, how important they are, and how you feel you've performed. Look for general patterns and trends. 
+				<p>To take full advantage of the app, periodically review the kinds of negotiations you engage in, how important they are, and how you feel you've performed. Look for general patterns and trends. </p>
 			</div>
 		</div>
 	</section>
