--- a/Negotiation3/reports/practices-www.html
+++ b/Negotiation3/reports/practices-www.html
@@ -11,6 +11,7 @@
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
+		    background-color: #efeff4
         }
 		canvas{
 		  width: 100% !important;
@@ -31,49 +32,11 @@
 		  padding:1rem 1rem 0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
+		  margin: 1rem 1rem;
+		  border-radius:1px;
 		  background-image: url("top-banner-12.png");
 		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.selfasesscard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.scorecardcard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
-		  user-select:none;
-		  animation:fly-in-from-left .5s 1s ease both;
-		  transform-origin:top left;
-		}
-
-		.bestpracticescard {
-		  padding:0.5rem 1rem;
-		  box-shadow:0 1px 2px #aaa;
-		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
-		  background-image: url("top-banner-6.png");
-		  background-repeat: no-repeat;
+   		  background-size: 100%;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
@@ -83,8 +46,8 @@
 		  padding:0.5rem 1rem;
 		  box-shadow:0 1px 2px #aaa;
 		  background:white;
-		  margin: 1.5rem 1rem;
-		  border-radius:3px;
+		  margin: 1rem 1rem;
+		  border-radius:1px;
 		  user-select:none;
 		  animation:fly-in-from-left .5s 1s ease both;
 		  transform-origin:top left;
