--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -117,11 +117,11 @@
 				<div class="col-xs-2"></div>
 				<div class="col-xs-4">
 					<div id="importance" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; font-size: 14px">Importance</span>
+					<span style="font-size: 14px; font-size: 16px">Importance</span>
 				</div>
 				<div class="col-xs-4" style="font-size: 14px; line-height:1.14285714285714">
 					<div id="satisfaction" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; margin-left:5px">Satisfaction</span>
+					<span style="font-size: 16px; margin-left:5px">Satisfaction</span>
 				</div>
 			</div><br>
 		</section>
