--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -133,7 +133,7 @@
     
     
 	<div>
-		<p style="font-size: 16px;"><strong>%@</strong></p>
+		<h4 style="font-weight: 400; color:#ff9f33">%@</h4>
 
 		<p style="font-size: 14px;">Scorecard created %@</p>
 
