--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -23,7 +23,7 @@
 			    width: 15em;
 				  border:thin solid gray;
 				  border-radius:3px;
-				  margin:0.5rem 4.5rem;
+				  margin:0.5rem auto;
 
 			}
 
